kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
    - host: 20.93.175.149.nip.io 
      http:
        paths:
        - pathType: Prefix
          path: /api
          backend:
            service:
              name: backend
              port: 
                number: 8080
        - pathType: Prefix
          path: /
          backend:
            service:
              name: frontend
              port: 
                number: 3000
  ingressClassName: nginx
